--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,12 @@
             <artifactId>mvvmfx</artifactId>
             <version>1.6.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.spullara.mustache.java/compiler -->
+        <dependency>
+            <groupId>com.github.spullara.mustache.java</groupId>
+            <artifactId>compiler</artifactId>
+            <version>0.9.4</version>
+        </dependency>
+
     </dependencies>
 </project>
